[package]
name = "gmaps_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.13", features = ["json"] }

tokio-test = "0.4.2"
serde = "1.0.152"
serde_json = "1.0.91"
thiserror = "1.0.38"